# stutil

./: .pre-commit-config.yaml  LICENSE  README.md  docker-compose.yaml  pyproject.toml  ruff.toml  setup.py
docker/python/: Dockerfile
stutil/: __init__.py  __main__.py  _funtext.py  download.py  easydict.py  exceptions.py  get_by_name.py  io.py  logger.py  misc.py  notify.py  path.py  timer.py  timezone.py  version.py
